# nrap

./: .gitignore  Cargo.toml  README.md  Session.vim  index.html
docs/: index-23baf7382b4cf8ff.js  index-23baf7382b4cf8ff_bg.wasm  index.html
nrap_examples/: builtin.nrap  fib.nrap  if.nrap  loop.nrap  parameter_attributes.nrap  variables.nrap
src/: main.rs
src/interpreter/: mod.rs
src/interpreter/analysis/: ast.rs  errors.rs  lexer.rs  token.rs
src/interpreter/analysis/parser/: macros.rs  mod.rs
src/interpreter/evaluator/: builtin.rs  environment.rs  errors.rs  mod.rs  object.rs  procedure.rs
