[package]
name = "nrap"
version = "0.1.0"
authors = ["Emilio González <emigr2k1@gmail.com>"]
edition = "2018"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.79"
js-sys = "0.3.56"
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.56"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlInputElement",
]
